fix error not showing current option

--- a/app/assets/stylesheets/rooms.scss
+++ b/app/assets/stylesheets/rooms.scss
@@ -161,14 +161,6 @@
   }
 }
 
-.active {
-  display: none !important;
-}
-
-.inline-block-display {
-  display: inline-block;
-}
-
 .round-border-input {
   border-radius: 10px;
 }
